--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -1,7 +1,6 @@
-# Theme Skin
-skin: default # default, night, plum, sea, soft, steel
 
-# Theme Text
+skin: sea 
+
 t:
   skip_links: "Skip links"
   skip_primary_nav: "Skip to primary navigation"
@@ -39,7 +38,7 @@ t:
   cv_volunteer: "Volunteer"
   cv_work: "Work"
 
-# Google Fonts
+
 google_fonts:
   - name: "Fira Sans"
     weights: "400,400i,600,600i"
